--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,45 +1,119 @@
-<form [formGroup]="Formulario" (ngSubmit)="onLoggedin()" role="form">
-    <div>
-        <div>
-            <input type="email" formControlName="email" placeholder="{{ 'Email' }}">
+<p-toast></p-toast>
+<p-confirmDialog header="Confirmation" width="425"></p-confirmDialog>
+<!-- Pop up para agregar nuevo producto -->
+<!-- !!! IMPORTANTE !!! Lo convertí en componente a parte -->
+<!-- <p-dialog header="Heroes Detalles" 
+    [(visible)]="productDialog" 
+    [style]="{width: '50vw', height: '200vh'}"
+    [maximizable]="true"
+    position="top">
+    <form action="" [formGroup]="nuevoProducto">
+        <div class="productoForm">
+            <label for="nombre">Nombre</label>
+            <input type="text" id="nombre" pInputText formControlName="nombre"/>
+            <label for="descripcion">Descripcion</label>
+            <textarea rows="4" cols="30" type="textarea" id="descripcion" pInputTextarea formControlName="descripcion"></textarea>
+            <label for="categoria">Categoria</label>
+            <p-dropdown formControlName="categoria" [options]="categorias" placeholder="Selecciona"></p-dropdown>
+            <label for="genero">Genero</label>
+            <div id="genero">
+                <p-radioButton inputId="hombre" value="hombre" formControlName="genero"></p-radioButton>
+                <label for="hombre">Hombre</label>
+                <br>
+                <p-radioButton inputId="mujer" value="mujer" formControlName="genero"></p-radioButton>
+                <label for="mujer">Mujer</label>
+            </div>
+            <label for="urlimagen">URL Imagen</label>
+            <input type="text" id="urlimagen" pInputText formControlName="url"/>
+            <div>
+                <p-button label="Save" [text]="true" icon="pi pi-check" (click)="saveProduct()"></p-button>
+                <p-button label="Cancel" [text]="true" icon="pi pi-times" (click)="productDialog = false;"></p-button>
+            </div>
         </div>
+    </form>
+</p-dialog> -->
 
-        <div>
-            <input type="password" formControlName="password" placeholder="{{ 'Password'}}">
-        </div>
-    </div>
-    <button type="submit">{{ 'Log in' }}</button>
-</form>
-<p-table [value]="products" [tableStyle]="{'min-width': '60rem'}">
+<p-toolbar styleClass="mb-4 gap-2">
+    <ng-template pTemplate="left">
+        <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="showDialog('Agregar Heroe')"></button>
+        <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button>
+    </ng-template>
+
+    <ng-template pTemplate="right">
+        <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import" class="mr-2 inline-block"></p-fileUpload>
+        <button pButton pRipple label="Export" icon="pi pi-upload" class="p-button-help"></button>
+    </ng-template>
+</p-toolbar>
+<p-table
+    #dt
+    [value]="products"
+    [rows]=5
+    [paginator]="true"
+    [globalFilterFields]="['nombre', 'genero', 'descripcion', 'categoria']"
+    [tableStyle]="{ 'min-width': '75rem' }"
+    [(selection)]="selectedProducts"
+    [rowHover]="true"
+    dataKey="id"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [showCurrentPageReport]="true"
+    [rowsPerPageOptions]="[5, 10, 20]"
+    [lazy]="true" (onLazyLoad)="getData($event)"
+    [loading]="loading"
+    [totalRecords]="total">
     <ng-template pTemplate="caption">
         <div class="flex align-items-center justify-content-between">
-            Products
-            <p-button icon="pi pi-refresh"></p-button>
+            <h2 class="m-0">Manage Heros</h2>
+            <span class="p-input-icon-left">
+                <i class="pi pi-search"></i>
+                <input pInputText type="text" (input)="dt.filterGlobal(filterSearch($event), 'contains')" placeholder="Search..." />
+            </span>
         </div>
     </ng-template>
     <ng-template pTemplate="header">
         <tr>
-            <th>Name</th>
+            <th style="width: 4rem">
+                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+            </th>
+            <th pSortableColumn="nombre" style="min-width:15rem">Nombre <p-sortIcon field="nombre"></p-sortIcon></th>
             <th>Image</th>
-            <th>Price</th>
-            <th>Category</th>
-            <th>Reviews</th>
-            <th>Status</th>
+            <th pSortableColumn="genero">Genero <p-sortIcon field="genero"></p-sortIcon></th>
+            <th pSortableColumn="categoria" style="min-width:10rem">Categoria <p-sortIcon field="categoria"></p-sortIcon></th>
+            <!-- <th pSortableColumn="rating">Reviews <p-sortIcon field="rating"></p-sortIcon></th>
+            <th pSortableColumn="inventoryStatus" style="min-width:10rem">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th> -->
+            <th></th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-product>
         <tr>
-            <td>{{product.name}}</td>
-            <td><img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" width="100" class="shadow-4" /></td>
-            <td>{{product.price | currency:'USD'}}</td>
-            <td>{{product.category}}</td>
-            <td><p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating></td>
-            <td><p-tag [value]="product.inventoryStatus" [severity]="getSeverity(product.inventoryStatus)"></p-tag></td>
+            <td>
+                <p-tableCheckbox [value]="product"></p-tableCheckbox>
+            </td>
+            <td>{{ product.nombre }}</td>
+            <td><img [src]="product.url" [alt]="product.nombre" width="50" class="shadow-4" /></td>
+            <!-- <td>{{ product.genero | currency: 'USD' }}</td> -->
+            <td>{{ product.genero }}</td>
+            <td>{{ product.categoria }}</td>
+            <!-- <td><p-rating [ngModel]="product.rating" [readonly]="false" [cancel]="false">
+                <ng-template pTemplate="cancelicon">
+                    <img src="https://primefaces.org/cdn/primeng/images/demo/rating/cancel.png" width="25px" height="25px" />
+                </ng-template>
+                <ng-template pTemplate="onicon">
+                    <img src="https://static.vecteezy.com/system/resources/previews/029/139/417/non_2x/happy-emoji-happy-emoji-happy-emoji-transparent-background-ai-generative-free-png.png" width="35px" height="auto" />
+                </ng-template>
+                <ng-template pTemplate="officon">
+                    <img src="https://i.pngimg.me/thumb/f/720/m2i8Z5d3Z5K9m2i8.jpg" width="35px" height="auto" />
+                </ng-template>
+            </p-rating></td> -->
+            <!-- <td>
+                <p-tag [value]="product.inventoryStatus" [severity]="getSeverity(product.inventoryStatus)"></p-tag>
+            </td> -->
+            <td>
+                <button pButton pRipple icon="pi pi-pencil" (click)="editProduct(product)" class="p-button-rounded p-button-success mr-2"></button>
+                <button pButton pRipple icon="pi pi-trash" (click)="deleteProduct(product)" class="p-button-rounded p-button-warning"></button>
+            </td>
         </tr>
     </ng-template>
     <ng-template pTemplate="summary">
-        <div class="flex align-items-center justify-content-between">
-            In total there are {{products ? products.length : 0 }} products.
-        </div>
+        <div class="flex align-items-center justify-content-between">In total there are {{ products ? products.length : 0 }} products.</div>
     </ng-template>
 </p-table>
