--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -35,13 +35,14 @@
 
 <p-toolbar styleClass="mb-4 gap-2">
     <ng-template pTemplate="left">
+        <h2 class="m-0">Manage Heros</h2>
+    </ng-template>
+    
+    <ng-template pTemplate="right">
         <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="showDialog('Agregar Heroe')"></button>
         <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button>
-    </ng-template>
-
-    <ng-template pTemplate="right">
-        <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import" class="mr-2 inline-block"></p-fileUpload>
-        <button pButton pRipple label="Export" icon="pi pi-upload" class="p-button-help"></button>
+        <!-- <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import" class="mr-2 inline-block"></p-fileUpload>
+        <button pButton pRipple label="Export" icon="pi pi-upload" class="p-button-help"></button> -->
     </ng-template>
 </p-toolbar>
 <p-table
@@ -62,10 +63,14 @@
     [totalRecords]="total">
     <ng-template pTemplate="caption">
         <div class="flex align-items-center justify-content-between">
-            <h2 class="m-0">Manage Heros</h2>
             <span class="p-input-icon-left">
-                <i class="pi pi-search"></i>
-                <input pInputText type="text" (input)="dt.filterGlobal(filterSearch($event), 'contains')" placeholder="Search..." />
+                <p-inputGroup>
+                    <p-inputGroupAddon>
+                        <i class="pi pi-search"></i>
+                    </p-inputGroupAddon>
+                    <input pInputText type="text" [(ngModel)]="busqueda" (input)="dt.filterGlobal(busqueda, 'contains')" placeholder="Search...">
+                    <button pButton icon="pi pi-times" class="p-button-secondary" (click)="clearSearch(dt)"></button>
+                </p-inputGroup>
             </span>
         </div>
     </ng-template>
@@ -78,8 +83,6 @@
             <th>Image</th>
             <th pSortableColumn="genero">Genero <p-sortIcon field="genero"></p-sortIcon></th>
             <th pSortableColumn="categoria" style="min-width:10rem">Categoria <p-sortIcon field="categoria"></p-sortIcon></th>
-            <!-- <th pSortableColumn="rating">Reviews <p-sortIcon field="rating"></p-sortIcon></th>
-            <th pSortableColumn="inventoryStatus" style="min-width:10rem">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th> -->
             <th></th>
         </tr>
     </ng-template>
@@ -90,23 +93,8 @@
             </td>
             <td>{{ product.nombre }}</td>
             <td><img [src]="product.url" [alt]="product.nombre" width="50" class="shadow-4" /></td>
-            <!-- <td>{{ product.genero | currency: 'USD' }}</td> -->
             <td>{{ product.genero }}</td>
             <td>{{ product.categoria }}</td>
-            <!-- <td><p-rating [ngModel]="product.rating" [readonly]="false" [cancel]="false">
-                <ng-template pTemplate="cancelicon">
-                    <img src="https://primefaces.org/cdn/primeng/images/demo/rating/cancel.png" width="25px" height="25px" />
-                </ng-template>
-                <ng-template pTemplate="onicon">
-                    <img src="https://static.vecteezy.com/system/resources/previews/029/139/417/non_2x/happy-emoji-happy-emoji-happy-emoji-transparent-background-ai-generative-free-png.png" width="35px" height="auto" />
-                </ng-template>
-                <ng-template pTemplate="officon">
-                    <img src="https://i.pngimg.me/thumb/f/720/m2i8Z5d3Z5K9m2i8.jpg" width="35px" height="auto" />
-                </ng-template>
-            </p-rating></td> -->
-            <!-- <td>
-                <p-tag [value]="product.inventoryStatus" [severity]="getSeverity(product.inventoryStatus)"></p-tag>
-            </td> -->
             <td>
                 <button pButton pRipple icon="pi pi-pencil" (click)="editProduct(product)" class="p-button-rounded p-button-success mr-2"></button>
                 <button pButton pRipple icon="pi pi-trash" (click)="deleteProduct(product)" class="p-button-rounded p-button-warning"></button>
