Agregar mensaje de vacio y arreglar borrado

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -101,6 +101,11 @@
             </td>
         </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <tr>
+            <td colspan="6" style="text-align: center;"><strong>No hay ningún heroe</strong></td>
+        </tr>
+    </ng-template>
     <ng-template pTemplate="summary">
         <div class="flex align-items-center justify-content-between">In total there are {{ products ? products.length : 0 }} products.</div>
     </ng-template>
